# deepseek-code-public

./: .actionlint.yaml  .changelog.md  .editorconfig  .gitattributes  .gitignore  CLAUDE.md  README.md  ROADMAP.md  docker-compose.yml  modifications.md  package.json  tsconfig.json  update.json  vite.config.ts
.agents/: agent.md  config.yaml
.github/workflows/: release-mac.yml
.tauri/: updater.key  updater.key.pub
apps/desktop/: package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/crates/sidecar-agent/: Cargo.toml
apps/desktop/src-tauri/crates/sidecar-agent/src/: agent.rs  lib.rs  protocol.rs  provider.rs  safety.rs  session.rs
apps/desktop/src-tauri/crates/sidecar-agent/src/tools/: bash.rs  file_edit.rs  file_read.rs  file_write.rs  glob.rs  grep.rs  mod.rs  question.rs  subagent.rs  todowrite.rs  webfetch.rs  websearch.rs
docs/: preview.md  route-map.md  subagent.md  v0.6.0_plan.md
scripts/: ai-runner-v2.js  bump-version.ts  check-tabs.sh  fast-validate.js  lint-diff.sh  lint.sh  openhands-call  openhands-call.js  smoke-v0.6.0.ts
src/: App.css  App.tsx  mockData.ts
src-sidecar/: index.ts
src-tauri/: Cargo.toml  fable.md  tauri.conf.json
src-tauri/binaries/: opencode-sidecar-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  safety.rs
src/bridge/: bridge.test.ts  index.ts  mock.ts  tauri.ts  types.ts
src/components/: ChatFeed.tsx  ChatInput.tsx  EmptyState.tsx  ExpandableToolCard.tsx  Icons.tsx  LeftSidebar.tsx  Mermaid.tsx  RightPanel.tsx  SettingsModal.tsx  TitleBar.tsx  ToolCallCard.tsx  (+1 more)
(+72 files in other folders)
