[package]
name = "sidecar-agent"
version = "0.5.0"
edition = "2021"
description = "Rust-native agent loop replacing the Bun sidecar binary"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
eventsource-stream = "0.2"
futures = "0.3"
async-stream = "0.3"
walkdir = "2"
glob-match = "0.2"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
